# QtFrame

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  Run.cpp  main.cpp
CV/: SetCamearMap.cpp  SetCameraMap.h  default.h
Child_CameraConfig/: CameraConfig.cpp  CameraConfig.h  CameraConfig.ui
Child_SystemConfig/: SystemConfig.cpp  SystemConfig.h  SystemConfig.ui
Cpp_Main/: Main.cpp  Main.h  MainWindow.cpp  MainWindow.h  MainWindow.ui
File_Config/: config.ini
File_Config/yellow/: camera0.ini  camera1.ini  camera3.ini
File_Config/标签检测/: camera0.ini  camera1.ini  camera2.ini  camera3.ini  camera4.ini  camera5.ini
File_Config/黄色/: camera2.ini  camera3.ini
Main/: CameraOperation.cpp  CameraOperation.h  DetectionBase.cpp  DetectionBase.h  Main.cpp  Main.h  MainWindow.ui  MyWidget.h  SensorControl.h
MvInclude/: CameraParams.h  MvCameraControl.h  MvErrorDefine.h  MvObsoleteInterfaces.h  MvSdkExport.h  PixelType.h
